# EZ4Connect

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  zjuconnectmode.cpp
.github/workflows/: build.yml
authinfowindow/: authinfowindow.cpp
docs/: ADVANCED_USAGE.md
resource/: Info.plist
scripts/: deploy-linux.sh  deploy-macos.sh  deploy-windows.ps1  macos-notarize-dmg.sh  macos-sign-app.sh
settingwindow/: settingwindow.cpp  settingwindow.h  settingwindow.ui
ssologinwebview/: ssologinwebview.cpp  ssologinwebview.h
sudowindow/: sudowindow.cpp  sudowindow.h  sudowindow.ui
utils/: coreversion.cpp  profilemanager.cpp  profilemanager.h  proxysettings.cpp  trustdevice.cpp  utils.cpp  utils.h
zjuconnectcontroller/: zjuconnectcontroller.cpp  zjuconnectcontroller.h
